--- a/flask/pybo/templates/base.html
+++ b/flask/pybo/templates/base.html
@@ -8,7 +8,12 @@
         <title>flask study</title>
     </head>
     <body>
+        {% include "navbar.html" %}
         {% block content %}
         {% endblock %}
+        <!-- jQuery JS -->
+        <script src="{{ url_for('static', filename='jquery-3.6.0.min.js') }}"></script>
+        <!-- Bootstrap JS -->
+        <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
     </body>
 </html>
