--- a/flask/pybo/templates/question/question_detail.html
+++ b/flask/pybo/templates/question/question_detail.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container my-3">
+    <!-- <input type="button" value="뒤로" class = "btn btn-primary my-3" onclick="location.href='{{ url_for('question._list') }}'"> //-->
     <h2 class="border-bottom py-2">{{ question.subject }}</h2>
     <div class="card my-3">
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
             <div class="d-flex justify-content-end">
-                <div class="badge badge-primary p-2">
-                    {{ question.create_date }}
+                <div class="badge badge-light p-2">
+                    {{ question.create_date|datetime }}
                 </div>
             </div>
         </div>
@@ -22,18 +23,24 @@
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
             <div class="d-flex justify-content-end">
-                <div class="badge badge-primary p-2">
-                    {{ answer.create_date }}
+                <div class="badge badge-light p-2">
+                    {{ answer.create_date|datetime }}
                 </div>
             </div>
         </div>
     </div>
     {% endfor %}
     <form action="{{ url_for('answer.create', question_id = question.id) }}" method="post" class="my-3">
+        {{ form.csrf_token }}
+        {% for field, errors in form.errors.items() %}
+        <div class="alert alert-danger" role="alert">
+            <strong>{{ form[field].label }}</strong>: {{ ','.join(errors) }}
+        </div>
+        {% endfor %}
         <div class="form-group">
             <textarea name="content" id="content" class="form-control" rows="10"></textarea>
         </div>
-        <input type="submit" values="답변등록" class="btn btn-primary">
+        <input type="submit" values="답변등록" class="btn btn-primary my-3">
     </form>
 </div>
 {% endblock %}
