--- a/flask/pybo/templates/question/question_form.html
+++ b/flask/pybo/templates/question/question_form.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container">
+    <!-- <input type="button" value="뒤로" class = "btn btn-primary my-3" onclick="location.href='{{ url_for('question._list') }}'"> //-->
     <h5 class="my-3 border-bottom pb-2">질문 등록</h5>
     <form method="post" class="post-form my-3">
         {{ form.csrf_token }}
@@ -17,7 +18,7 @@
             {{ form.content.label }}
             <textarea class="form-control" name="content" id="content" rows="5">{{ form.content.data or '' }}</textarea>
         </div>
-        <button type="submit" class="btn btn-primary">저장하기</button>
+        <button type="submit" class="btn btn-primary my-3">저장하기</button>
     </form>
 </div>
 {% endblock %}
