--- a/flask/pybo/templates/question/question_list.html
+++ b/flask/pybo/templates/question/question_list.html
@@ -3,23 +3,25 @@
 <div class="container my-3">
     <table class="table">
         <thread>
-            <tr class="thread-dark">
+            <tr class="text-center thread-dark">
                 <th>번호</th>
-                <th>제목</th>
+                <th style="width:50%">제목</th>
+                <th>글쓴이</th>
                 <th>작성일시</th>
             </tr>
         </thread>
         <tbody>
         {% if question_list %}
         {% for question in question_list.items %}
-        <tr>
+        <tr class="text-center">
             <td>{{ question_list.total - ((question_list.page-1) * question_list.per_page) - loop.index0 }}</td>
-            <td>
+            <td class="text-left">
                 <a href="{{ url_for('question.detail', question_id = question.id) }}/">{{ question.subject }}</a>
                 {% if question.answer_set|length > 0 %}
                 <span class="text-danger small ml-2">{{ question.answer_set|length }}</span>
                 {% endif %}
             </td>
+            <td>{{ question.user.username }}</td>
             <td>{{ question.create_date|datetime }}</td>
         </tr>
         {% endfor %}
@@ -71,6 +73,10 @@
         {% endif %}
     </ul>
     <!-- 페이징처리 끝 -->
+    {% if not g.user %}
+    <a href="{{ url_for('auth.login') }}" class="btn btn-primary my-3">질문을 위해 로그인</a>
+    {% else %}
     <a href="{{ url_for('question.create') }}" class="btn btn-primary my-3">질문 등록하기</a>
+    {% endif %}
 </div>
 {% endblock %}
