--- a/flask/pybo/templates/question/question_detail.html
+++ b/flask/pybo/templates/question/question_detail.html
@@ -8,7 +8,7 @@
             <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
             <div class="d-flex justify-content-end">
                 {% if question.modify_date %}
-                <div class="badge badge-light p-2 text-left mx-3">
+                <div class="badge badge-light p-2 text-left mx-3 text-muted">
                     <div class="mb-2">modified at</div>
                     <div>{{ question.modify_date|datetime }}</div>
                 </div>
@@ -24,6 +24,36 @@
                 <a href="#" class="delete btn btn-sm btn-outline-secondary" data-uri="{{ url_for('question.delete', question_id = question.id) }}">삭제</a>
             </div>
             {% endif %}
+            <!-- 질문 댓글 Start -->
+            {% if question.comment_set|length > 0 %}
+            <div class="mt-3">
+            {% for comment in question.comment_set %}
+                <div class="comment py-2 text-muted">
+                    <span style="white-space: pre-line;">{{ comment.content }}</span>
+                    <span>
+                        - {{ comment.user.username }}, {{ comment.create_date|datetime }}
+                        {% if comment.modify_date %}
+                        (수정:{{ comment.modify_date|datetime }})
+                        {% endif %}
+                    </span>
+                    {% if g.user == comment.user %}
+                    <a href="{{ url_for('comment.modify_question', comment_id=comment.id) }}" class="small">수정</a>,
+                    <a href="#" class="small delete"
+                       data-uri="{{ url_for('comment.delete_question', comment_id=comment.id) }}">삭제</a>
+                    {% endif %}
+                </div>
+            {% endfor %}
+            </div>
+            {% endif %}
+            {% if not g.user %}
+            <a href="{{ url_for('auth.login') }}" class="small">댓글을 위해 로그인</a>
+            {% else %}
+            <div>
+                <a href="{{ url_for('comment.create_question', question_id=question.id) }}"
+                   class="small"><small>댓글 추가 ..</small></a>
+            </div>
+            {% endif %}
+            <!-- 질문 댓글 End -->
         </div>
     </div>
     <h5 class="border-bottom my-3 py-2">
@@ -53,6 +83,36 @@
                 <a href="#" class="delete btn btn-sm btn-outline-secondary " data-uri="{{ url_for('answer.delete', answer_id=answer.id) }}">삭제</a>
             </div>
             {% endif %}
+            <!-- 답변 댓글 Start -->
+            {% if answer.comment_set|length > 0 %}
+            <div class="mt-3">
+            {% for comment in answer.comment_set %}
+                <div class="comment py-2 text-muted">
+                    <span style="white-space: pre-line;">{{ comment.content }}</span>
+                    <span>
+                        - {{ comment.user.username }}, {{ comment.create_date|datetime }}
+                        {% if comment.modify_date %}
+                        (수정:{{ comment.modify_date|datetime }})
+                        {% endif %}
+                    </span>
+                    {% if g.user == comment.user %}
+                    <a href="{{ url_for('comment.modify_answer', comment_id=comment.id) }}" class="small">수정</a>,
+                    <a href="#" class="small delete"
+                       data-uri="{{ url_for('comment.delete_answer', comment_id=comment.id) }}">삭제</a>
+                    {% endif %}
+                </div>
+            {% endfor %}
+            </div>
+            {% endif %}
+            {% if not g.user %}
+            <a href="{{ url_for('auth.login') }}" class="small">댓글을 위해 로그인</a>
+            {% else %}
+            <div>
+                <a href="{{ url_for('comment.create_answer', answer_id=answer.id) }}"
+                   class="small"><small>댓글 추가 ..</small></a>
+            </div>
+            {% endif %}
+            <!-- 답변 댓글 End -->
         </div>
     </div>
     {% endfor %}
