--- a/flask/pybo/templates/auth/login.html
+++ b/flask/pybo/templates/auth/login.html
@@ -15,6 +15,7 @@
                    value="{{ form.password.data or '' }}">
         </div>
         <button type="submit" class="btn btn-primary">로그인</button>
+        <a href="{{ url_for('auth.signup') }}" class="btn btn-outline-secondary">가입</a>
     </form>
 </div>
 {% endblock %}
